# gate-futures-bot

./: .gitattributes  .gitignore  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
docs/: 00-environment-setup.html  01-kotlin-basics.html  02-gradle-basics.html  03-spring-boot-basics.html  04-step1-buy-sell.html  05-step2-chart-data.html  06-step3-auto-entry.html  07-step4-auto-exit.html  08-coroutines-workers.html  index.html
docs/adr/: 0001-kotlin-spring-boot.md  0002-sdk-격리.md  0003-strategy-순수-판단.md  0004-ktlint.md  0005-archunit.md  0006-caffeine-cache.md  0007-notification-multi-channel.md  0008-hexagonal-port-adapter.md  0009-risk-manager-게이트키퍼.md  0010-position-fsm.md  0011-event-sourcing-경량.md  0012-kill-switch-admin-api.md  0013-python-port-monorepo.md  README.md  template.md
docs/assets/: style.css
docs/interview/: 00-technology-decisions.html  01-overview.html  02-kotlin-basics.html  03-kotlin-classes.html  04-kotlin-functions.html  05-kotlin-collections.html  07-gradle.html  (+12 more)
kotlin/: README.md
python/: .env.example  README.md  pyproject.toml
python/docs/: testnet-validation.md
python/src/gatebot/: bootstrap.py  config.py
python/src/gatebot/adapters/: exchange.py
python/src/gatebot/domain/: exceptions.py  model.py
python/src/gatebot/entrypoints/: cli.py  command_parser.py
python/src/gatebot/service_layer/: market_data.py  trading.py
python/tests/: conftest.py
python/tests/integration/: test_gate_exchange.py
python/tests/unit/: test_cli.py  test_command_parser.py  test_market_data.py  test_order_command.py  test_trading.py
(+106 files in other folders)
