[project]
name = "gatebot"
version = "0.1.0"
description = "Gate.io 선물 자동매매 봇 (Python 포트)"
requires-python = ">=3.12"
dependencies = [
    "gate-api>=7,<8",
    "python-dotenv>=1.0",
]

[project.scripts]
gatebot = "gatebot.entrypoints.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gatebot"]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
